# ckb-standalone-debugger

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml
bins/: Cargo.toml
bins/src/: main.rs  misc.rs
bins/tests/: .gitignore  Makefile  fib.c  file_operations.c  outofmemory.c  read_file.c  run.sh
ckb-debugger/: .gitignore  Cargo.toml  README.md
ckb-debugger-api/: Cargo.toml  README.md
ckb-debugger-api/src/: embed.rs  lib.rs
ckb-debugger-api/tests/: test_json.rs  test_rust.rs
ckb-debugger-api/tests/programs/: bench
ckb-debugger/docs/: debugging_contract_with_vscode.md  probes.md
ckb-debugger/examples/: Makefile  MakefileTest.sh  README.md  always_failure  always_failure.c  check.sh  debug_exec_and_spawn_with_gdb.md  elfutils.py  exec.json  exec.md  exec_callee  exec_callee.c  exec_caller  exec_caller.c  exec_gdb_cmd.txt  fib  fib.c  fib.md  fib.pprof  file_operations  file_operations.c  gdb.md  mock_tx.json  mock_tx.md  out_of_memory  out_of_memory.c  out_of_memory.md  print_log  print_log.c  print_log.md  read_file  read_file.c  riscv.h  spawn.json  spawn.md  spawn_callee_strcat  spawn_callee_strcat.c  spawn_caller_strcat  spawn_caller_strcat.c  timenow  (+4 more)
ckb-debugger/res/: Makefile  fib.c  read_file.c
ckb-debugger/src/: api.rs  decode.rs  dummy_tx.json  embed.rs  lib.rs  machine_analyzer.rs  machine_assign.rs  machine_gdb.rs  main.rs  misc.rs  syscall_all.rs  syscall_elf_dumper.rs  syscall_stdio.rs
ckb-debugger/tests/: test_api.rs
ckb-gdb-remote-protocol/: Cargo.toml
ckb-gdb-remote-protocol/examples/: noop-server.rs
ckb-gdb-remote-protocol/src/: fs.rs  lib.rs  libc_fs.rs
ckb-gdb-remote-protocol/tests/: integration.rs
ckb-mock-tx-types/: Cargo.toml  README.md
ckb-mock-tx-types/src/: lib.rs
ckb-vm-debug-utils/: Cargo.toml  README.md
ckb-vm-debug-utils/examples/: gdb_remote_protocol_debugger.rs  gdbstub_debugger.rs
ckb-vm-debug-utils/src/: elf_dumper.rs  gdbserver.rs  gdbstub.rs  lib.rs  main.rs  stdio.rs
ckb-vm-pprof/: Cargo.toml  README.md
ckb-vm-pprof-converter/: .gitignore  Cargo.toml  README.md  build.rs
ckb-vm-pprof-converter/src/: main.rs
ckb-vm-pprof-converter/src/protos/: profile.rs
ckb-vm-pprof-protos/: .gitignore  Cargo.toml  build.rs
ckb-vm-pprof/examples/: print_fun.rs
ckb-vm-pprof/res/: Makefile  abc  fib  outofmemory  sbrk  sbrk.c  sprintf  sprintf.c
ckb-vm-pprof/scripts/: folder.py
ckb-vm-pprof/src/: cost_model.rs  lib.rs  main.rs
ckb-vm-signal-profiler/: Cargo.toml  README.md  build.rs
ckb-vm-signal-profiler/examples/: simple.rs
ckb-vm-signal-profiler/src/: frames.rs  lib.rs  timer.rs
js/: bootstrap.js  index.js  package-lock.json  package.json  webpack.config.js
protos/: build.rs
src/: lib.rs  transaction.rs
tests/: test_json.rs  test_rust.rs
tests/programs/: bench  bench.c  sample.c  sample.json  sample_data1.json
