[package]
name = "ckb-standalone-debugger"
description = "Standalone debugger for Nervos CKB"
version = "0.20.0-rc2"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
exclude = ["bins", "js"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ckb-chain-spec = "0.100.0-rc2"
ckb-error = "0.100.0-rc2"
ckb-traits = "0.100.0-rc2"
ckb-types = "0.100.0-rc2"
ckb-jsonrpc-types = "0.100.0-rc2"
ckb-script = { version="0.100.0-rc2", default-features = false, features = ["detect-asm"] }
faster-hex = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_plain = "0.3.0"
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"

[dev-dependencies]
byteorder = "1.3.2"
