[package]
name = "ckb-debugger-binaries"
version = "0.21.6"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
autobins = false

[[bin]]
name = "ckb-debugger"
path = "src/main.rs"

[features]
default = []
stdio = ["ckb-vm-debug-utils/stdio"]

[dependencies]
clap = "2.33.0"
ckb-mock-tx-types = "0.4.0"
ckb-chain-spec = "0.104.1"
ckb-script = { version = "0.104.1", default-features = false }
ckb-standalone-debugger = { path = ".." }
ckb-types = "0.104.1"
ckb-vm = { version = "0.21.4" }
ckb-vm-debug-utils = { git = "https://github.com/nervosnetwork/ckb-vm-debug-utils.git", rev = "9219fa5" }
env_logger = "0.4.3"
faster-hex = "0.4.0"
gdb-remote-protocol = { git = "https://github.com/luser/rust-gdb-remote-protocol", rev = "565ab0c" }
log = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_plain = "0.3.0"
ckb-vm-pprof = { git = "https://github.com/nervosnetwork/ckb-vm-pprof.git", rev = "dd2393f" }
lazy_static = "1.4.0"
rand = "0.8.5"
libc = "0.2.132"
# interim patch, must remove at v0.21.6
ckb-vm-definitions = "=0.21.4"
