[package]
name = "ckb-debugger-api"
description = "Standalone debugger for Nervos CKB"
version = "0.116.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ckb-hash = "=0.116.0"
ckb-chain-spec = "=0.116.0"
ckb-jsonrpc-types = "=0.116.0"
ckb-mock-tx-types = { path = "../ckb-mock-tx-types", version = "0.116.0" }
ckb-script = { version = "=0.116.0", default-features = false }
ckb-types = "=0.116.0"
ckb-vm = "=0.24.9"
hex = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
wasm-bindgen = "=0.2.50"

[dev-dependencies]
byteorder = "1.3.2"
