[package]
name = "ckb-debugger-api"
description = "Standalone debugger for Nervos CKB"
version = "0.116.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ckb-hash = { path = "/home/ubuntu/src/ckb/util/hash" }
ckb-chain-spec = { path = "/home/ubuntu/src/ckb/spec" }
ckb-jsonrpc-types = { path = "/home/ubuntu/src/ckb/util/jsonrpc-types" }
ckb-mock-tx-types = { path = "../ckb-mock-tx-types", version = "0.116.1" }
ckb-script = { path = "/home/ubuntu/src/ckb/script", default-features = false }
ckb-types = { path = "/home/ubuntu/src/ckb/util/types" }
# ckb-vm = "0.24.11"
ckb-vm = { path = "/home/ubuntu/src/ckb-vm" }
hex = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
wasm-bindgen = "=0.2.50"

[dev-dependencies]
byteorder = "1.3.2"
