[package]
name = "ckb-debugger-api"
description = "Standalone debugger for Nervos CKB"
version = "0.116.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ckb-hash = { git = "https://github.com/libraries/ckb", branch = "new_spawn" }
ckb-chain-spec = { git = "https://github.com/libraries/ckb", branch = "new_spawn" }
ckb-jsonrpc-types = { git = "https://github.com/libraries/ckb", branch = "new_spawn" }
ckb-mock-tx-types = { path = "../ckb-mock-tx-types", version = "=0.116.1" }
ckb-script = { git = "https://github.com/libraries/ckb", branch = "new_spawn", default-features = false, features = ["flatmemory"] }
ckb-types = { git = "https://github.com/libraries/ckb", branch = "new_spawn" }
ckb-vm = { git = "https://github.com/libraries/ckb-vm", branch = "spawn-debugger-3", default-features = false }
hex = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
wasm-bindgen = "=0.2.50"

[dev-dependencies]
byteorder = "1.3.2"
