[package]
name = "ckb-debugger"
description = "Standalone debugger for Nervos CKB"
version = "0.116.1"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"

[features]
default = ["probes"]
stdio = ["ckb-vm-debug-utils/stdio"]
probes = ["probe", "ckb-script/flatmemory"]

[dependencies]
addr2line = "0.17"
clap = "2.33.0"
ckb-chain-spec = { path = "/home/ubuntu/src/ckb/spec" }
ckb-debugger-api = { path = "../ckb-debugger-api", version = "0.116.1" }
ckb-hash = { path = "/home/ubuntu/src/ckb/util/hash" }
ckb-mock-tx-types = { path = "../ckb-mock-tx-types", version = "0.116.1" }
ckb-script = { path = "/home/ubuntu/src/ckb/script", default-features = false }
ckb-traits = { path = "/home/ubuntu/src/ckb/traits" }
ckb-types = { path = "/home/ubuntu/src/ckb/util/types" }
# ckb-vm = "0.24.11"
ckb-vm = { path = "/home/ubuntu/src/ckb-vm" }
ckb-vm-debug-utils = { path = "../ckb-vm-debug-utils", version = "0.116.1" }
ckb-vm-pprof = { path = "../ckb-vm-pprof", version = "0.116.1" }
ckb-gdb-remote-protocol = { path = "../ckb-gdb-remote-protocol", version = "0.116.1" }
env_logger = "0.4.3"
gdbstub = "0.6.6"
gdbstub_arch = "0.2.4"
goblin = "0.4"
hex = "0.4"
lazy_static = "1.4.0"
libc = "0.2.132"
log = "0.4.0"
rand = "0.8.5"
serde_json = "1.0"
serde_plain = "1.0"
probe = { version = "0.5.0", optional = true }
