[package]
name = "ckb-mock-tx-types"
description = "CKB mock transaction types"
version = "0.115.0-rc2"
license = "MIT"
edition = "2021"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "=0.115.0-rc2"
ckb-jsonrpc-types = "=0.115.0-rc2"
ckb-traits = "=0.115.0-rc2"
serde = { version = "1.0", features = ["derive"] }
