[package]
name = "ckb-mock-tx-types"
description = "CKB mock transaction types"
version = "0.116.1"
license = "MIT"
edition = "2021"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { path = "/home/ubuntu/src/ckb/util/types" }
ckb-jsonrpc-types = { path = "/home/ubuntu/src/ckb/util/jsonrpc-types" }
ckb-traits = { path = "/home/ubuntu/src/ckb/traits" }
serde = { version = "1.0", features = ["derive"] }
