[package]
name = "ckb-vm-debug-utils"
version = "0.116.1"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2021"
description = "Utils for ckb-debugger"
license = "MIT"

[features]
default = []
stdio = ["libc", "nix"]

[dependencies]
byteorder = "1"
bytes = "1.0.0"
ckb-vm = { git = "https://github.com/libraries/ckb-vm", branch = "spawn-debugger-3", default-features = false }
ckb-gdb-remote-protocol = { path = "../ckb-gdb-remote-protocol", version = "0.116.1" }
libc = { version = "0.2.47", optional = true }
log = "0.4.0"
nix = { version = "0.26.2", optional = true }
gdbstub = "0.6.6"
gdbstub_arch = "0.2.4"
