[package]
name = "ckb-vm-debug-utils"
version = "0.118.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2021"
description = "Utils for ckb-debugger"
license = "MIT"

[features]
default = []
stdio = ["libc", "nix"]

[dependencies]
byteorder = "1"
bytes = "1.0.0"
ckb-vm = "=0.24.12"
libc = { version = "0.2.47", optional = true }
log = "0.4.0"
nix = { version = "0.26.2", optional = true }
gdbstub = "0.7"
gdbstub_arch = "0.3"
env_logger = "0.4.3"
