[package]
name = "ckb-vm-pprof-protos"
version = "0.116.1"
edition = "2021"
description = "Crate for generating Rust definitions from pprof proto"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-rust = "2.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
protoc-bin-vendored = "3.0.0"

[dependencies]
protobuf = { version = "2.25.1", features = ["with-bytes", "with-serde"] }
