[package]
name = "ckb-vm-pprof"
version = "0.116.1"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2021"
description = "Statistical CKB script cycles consumption flame graph"
license = "MIT"

[dependencies]
addr2line = "0.17.0"
clap = "2.33"
#ckb-vm = { version = "0.24.11", features = ["pprof"] }
ckb-vm = { path = "/home/ubuntu/src/ckb-vm", features = ["pprof"] }
goblin = "0.4"
