[package]
name = "ckb-vm-pprof"
version = "0.118.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2021"
description = "Statistical CKB script cycles consumption flame graph"
license = "MIT"

[dependencies]
addr2line = "0.17.0"
clap = "2.33"
ckb-vm = { version = "= 0.24.12", default-features = false, features = ["pprof"] }
goblin = "0.4"
