[package]
name = "ckb-vm-signal-profiler"
version = "0.1.0"
edition = "2018"
description = "Linux signal based profiler for ckb-vm, note this is profiling ckb-vm itself, not the programs running in ckb-vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protoc-rust = "2.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
protoc-bin-vendored = "3.0.0"

[dev-dependencies]
env_logger = "0.9.0"

[dependencies]
addr2line = "0.17.0"
ckb-vm = { version = "0.21.1", features = ["asm"] }
log = "0.4.16"
nix = "0.23.1"
lazy_static = "1.4.0"
protobuf = { version = "2.25.1", features = ["with-bytes", "with-serde"] }
