[package]
name = "ckb-vm-signal-profiler"
version = "0.113.0"
edition = "2021"
description = "Linux signal based profiler for ckb-vm, note this is profiling ckb-vm itself, not the programs running in ckb-vm"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "0.9.0"

[dependencies]
addr2line = "0.17.0"
ckb-vm = { version = "=0.24.6", features = ["asm"] }
log = "0.4.16"
nix = "0.23.1"
lazy_static = "1.4.0"
protobuf = { version = "2.25.1", features = ["with-bytes", "with-serde"] }
ckb-vm-pprof-protos = { path = "../ckb-vm-pprof-protos", version="0.113.0" }
